--- a/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-fp-form-config.xml
+++ b/becpg-plm/becpg-plm-share/src/main/resources/alfresco/forms/becpg-plm-fp-form-config.xml
@@ -79,9 +79,13 @@
           <show force="true" id="bcpg:precautionOfUseRef"/>
           <show force="true" id="bcpg:preparationTips"/>
           <show force="true" id="gs1:handlingInstructionsCodes"/>
+          <show force="true" id="gs1:healthClaimDescription"/>
           <show force="true" id="gs1:preparationType"/>
           <show force="false" id="bcpg:productMicrobioCriteriaRef"/>
           <show force="false" id="bcpg:meatType"/>
+          
+          <show force="false" id="gs1:referencedTradeItemEanCode"/>
+          <show force="false" id="gs1:referencedTradeItemTypeCode"/>
           
           <show force="false" id="gs1:cheeseMaturationPeriodDescription"/>
 		  <show force="false" id="gs1:cheeseMaturationProcessContainerTypeCode"/>
@@ -344,6 +348,15 @@
               <constraint event="keyup,change" type="MANDATORY" validation-handler="beCPG.forms.validation.GTIN"/>
             </constraint-handlers>
           </field>
+          <field id="gs1:referencedTradeItemEanCode" mandatory="false" read-only="false" set="mainInfo">
+            <control template="/org/alfresco/components/form/controls/textfield.ftl">
+                <control-param name="maxLength">14</control-param>
+            </control>
+            <constraint-handlers>
+              <constraint event="keyup,change" type="MANDATORY" validation-handler="beCPG.forms.validation.GTIN"/>
+            </constraint-handlers>
+          </field>
+          <field id="gs1:referencedTradeItemTypeCode" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="bcpg:subsidiaryRef" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="bcpg:trademarkRef" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="bcpg:plants" mandatory="false" read-only="false" set="mainInfo"/>
@@ -488,14 +501,14 @@
             </control>
           </field>
           <field id="gs1:handlingInstructionsCodes" mandatory="false" read-only="false" set="consumer"/>
+          <field id="gs1:healthClaimDescription" mandatory="false" read-only="false" set="consumer"/>
           <field id="gs1:preparationType" mandatory="false" read-only="false" set="consumer"/>
           <field help-id="becpg.forms.help.productMicrobioCriteriaRef" id="bcpg:productMicrobioCriteriaRef" mandatory="false" read-only="false" set="consumer">
             <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
               <control-param name="pageLinkTemplate">entity-data-lists?list=View-properties&amp;nodeRef={nodeRef}</control-param>
             </control>
           </field>
-          <field id="bcpg:meatType" mandatory="false" read-only="false" set="consumer"/>
-          
+          <field id="bcpg:meatType" mandatory="false" read-only="false" set="consumer"/> 
           
           <set appearance="bordered-panel" id="cheese" label-id="becpg.forms.set.cheese.label" parent="mainTab" template="/org/alfresco/components/form/2-column-set.ftl"/>
           
@@ -1323,6 +1336,7 @@
           <show force="true" id="gs1:eanCodeInnerPack"/>
           <show force="true" id="bcpg:eanCodeLevel2"/>
           <show force="true" id="bcpg:eanCodeLevel3"/>
+          <show force="false" id="gs1:referencedTradeItemEanCode"/>
           <show force="true" id="bcpg:subsidiaryRef"/>
           <show force="true" id="bcpg:trademarkRef"/>
           <show force="true" id="bcpg:plants"/>
@@ -1455,6 +1469,12 @@
 	            <control-param name="maxLength">14</control-param>
 	          	<control-param name="forceEditable">true</control-param>
 	          </control>
+          </field>
+          <field id="gs1:referencedTradeItemEanCode" mandatory="false" read-only="false" set="mainInfo">
+            <control>
+                <control-param name="maxLength">14</control-param>
+                <control-param name="forceEditable">true</control-param>
+            </control>
           </field>
           <field id="bcpg:customsCodeRef" mandatory="false" read-only="false" set="2-col-product-criteria">
 	          <control>
@@ -1703,6 +1723,8 @@
           <show force="false" id="bcpg:eanCode"/>
           <show force="false" id="bcpg:eanCodeLevel2"/>
           <show force="false" id="bcpg:eanCodeLevel3"/>
+          <show force="false" id="gs1:referencedTradeItemEanCode"/>
+          <show force="false" id="gs1:referencedTradeItemTypeCode"/>
           <show force="true" id="bcpg:subsidiaryRef"/>
           <show force="true" id="bcpg:plants"/>
           <show force="true" id="bcpg:productGeoOrigin"/>
@@ -1812,6 +1834,15 @@
               <constraint event="keyup,change" type="MANDATORY" validation-handler="beCPG.forms.validation.GTIN"/>
             </constraint-handlers>
           </field>
+          <field id="gs1:referencedTradeItemEanCode" mandatory="false" read-only="false" set="mainInfo">
+            <control template="/org/alfresco/components/form/controls/textfield.ftl">
+                <control-param name="maxLength">14</control-param>
+            </control>
+            <constraint-handlers>
+              <constraint event="keyup,change" type="MANDATORY" validation-handler="beCPG.forms.validation.GTIN"/>
+            </constraint-handlers>
+          </field>
+          <field id="gs1:referencedTradeItemTypeCode" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="bcpg:subsidiaryRef" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="bcpg:plants" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="bcpg:productGeoOrigin" mandatory="false" read-only="false" set="mainInfo"/>
@@ -1994,6 +2025,8 @@
           <show force="true" id="gs1:eanCodeInnerPack"/>
           <show force="true" id="bcpg:eanCodeLevel2"/>
           <show force="true" id="bcpg:eanCodeLevel3"/>
+          <show force="false" id="gs1:referencedTradeItemEanCode"/>
+          <show force="false" id="gs1:referencedTradeItemTypeCode"/>
           <show force="true" id="bcpg:subsidiaryRef"/>
           <show force="true" id="bcpg:trademarkRef"/>
           <show force="true" id="bcpg:plants"/>
@@ -2040,9 +2073,12 @@
           <show force="true" id="bcpg:precautionOfUseRef"/>
           <show force="true" id="bcpg:preparationTips"/>
           <show force="true" id="gs1:handlingInstructionsCodes"/>
+          <show force="true" id="gs1:healthClaimDescription"/>
           <show force="true" id="gs1:preparationType"/>
           <show force="true" id="bcpg:productMicrobioCriteriaRef"/>
           <show force="true" id="bcpg:meatType"/>
+          <show force="true" id="gs1:referencedTradeItemEanCode"/>
+          <show force="true" id="gs1:referencedTradeItemTypeCode"/>
           <show force="true" id="bcpg:unitPrice"/>
           <show force="true" id="bcpg:unitTotalCost"/>
           <show force="true" id="bcpg:priceCurrency"/>
@@ -2242,6 +2278,15 @@
               <constraint event="keyup,change" type="MANDATORY" validation-handler="beCPG.forms.validation.GTIN"/>
             </constraint-handlers>
           </field>
+          <field id="gs1:referencedTradeItemEanCode" mandatory="false" read-only="false" set="mainInfo">
+            <control template="/org/alfresco/components/form/controls/textfield.ftl">
+                <control-param name="maxLength">14</control-param>
+            </control>
+            <constraint-handlers>
+              <constraint event="keyup,change" type="MANDATORY" validation-handler="beCPG.forms.validation.GTIN"/>
+            </constraint-handlers>
+          </field>
+          <field id="gs1:referencedTradeItemTypeCode" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="bcpg:subsidiaryRef" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="bcpg:trademarkRef" mandatory="false" read-only="false" set="mainInfo"/>
           <field id="bcpg:plants" mandatory="false" read-only="false" set="mainInfo"/>
@@ -2369,6 +2414,7 @@
             </control>
           </field>
           <field id="gs1:handlingInstructionsCodes" mandatory="false" read-only="false" set="consumer"/>
+          <field id="gs1:healthClaimDescription" mandatory="false" read-only="false" set="consumer"/>
           <field id="gs1:preparationType" mandatory="false" read-only="false" set="consumer"/>
           <field help-id="becpg.forms.help.productMicrobioCriteriaRef" id="bcpg:productMicrobioCriteriaRef" mandatory="false" read-only="false" set="consumer">
             <control template="/org/alfresco/components/form/controls/autocomplete-association.ftl">
